--- a/Interactive Plot.ipynb
+++ b/Interactive Plot.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SIR Plot\n",
-    "This repository is part of Covid-19 Modelling Project by [Department of Electrical and Information Engineering Universitas Gadjah Mada](http://jteti.ugm.ac.id/index.php?ver=YQ%3D%3D=)."
+    "# Interactive Plot\n",
+    "Interactive plot to model Covid-19 in Indonesia. This repository is part of Covid-19 Modelling Project by [Department of Electrical and Information Engineering Universitas Gadjah Mada](http://jteti.ugm.ac.id/index.php?ver=YQ%3D%3D=). Interactive site can be used using (need one to five minutes to load the plot):"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Static site can be seen in [nbviewer](https://nbviewer.jupyter.org/github/yasirroni/Indonesia-Covid-Model/blob/master/SIR%20Plot_Department%20of%20Electrical%20and%20Information%20Engineering_Universitas%20Gadjah%20Mada.ipynb)."
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/yasirroni/Indonesia-Covid-Model/master?urlpath=%2Fvoila%2Frender%2FInteractive%2520Plot.ipynb)"
    ]
   },
   {
