--- a/Interactive Plot.ipynb
+++ b/Interactive Plot.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Interactive Plot\n",
-    "Interactive plot to model Covid-19 in Indonesia. This repository is part of Covid-19 Modelling Project by [Department of Electrical and Information Engineering Universitas Gadjah Mada](http://jteti.ugm.ac.id/index.php?ver=YQ%3D%3D=). Interactive site can be used using (need one to five minutes to load the plot):"
+    "Interactive plot to model Covid-19 in Indonesia. This repository is part of Covid-19 Modelling Project by [Department of Electrical and Information Engineering Universitas Gadjah Mada](http://jteti.ugm.ac.id/index.php?ver=YQ%3D%3D=). Interactive site using Voilà can be used using (need one to five minutes to load the plot):"
    ]
   },
   {
@@ -236,22 +236,22 @@
     "lines_lin = bq.Lines(\n",
     "    x = t_list,\n",
     "    y = [S_list, I_list, R_list, D_list],\n",
+    "    colors = ['#2ca02c', '#ff7f0e', '#1f77b4', '#d62728'],\n",
+    "    labels = ['S', 'I', 'R', 'D'],\n",
+    "    display_legend = True,\n",
     "    scales = {\n",
     "        'x': x_sc,'y': y_sc_lin\n",
-    "    },\n",
-    "    display_legend = True,\n",
-    "    labels = ['S', 'I', 'R', 'D'],\n",
-    "    colors = ['#2ca02c', '#ff7f0e', '#1f77b4', '#d62728']\n",
+    "    }\n",
     ")\n",
     "lines_log = bq.Lines(\n",
     "    x = t_list,\n",
     "    y = [S_list, I_list, R_list, D_list],\n",
+    "    colors = ['#2ca02c', '#ff7f0e', '#1f77b4', '#d62728'],\n",
+    "    labels = ['S', 'I', 'R', 'D'],\n",
+    "    display_legend = True,\n",
     "    scales = {\n",
     "        'x': x_sc,'y': y_sc_log\n",
-    "    },\n",
-    "    display_legend = True,\n",
-    "    labels = ['S', 'I', 'R', 'D'],\n",
-    "    colors = ['#2ca02c', '#ff7f0e', '#1f77b4', '#d62728'],\n",
+    "    }\n",
     ")\n",
     "\n",
     "# figure\n",
@@ -452,7 +452,7 @@
     "            lines_log.x = t_list\n",
     "            lines_log.colors = colors_temp\n",
     "\n",
-    "        time.sleep(0.1)"
+    "        time.sleep(0.05)"
    ]
   },
   {
@@ -481,7 +481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a86507e931b47ebb242c8849a6d2f0f",
+       "model_id": "3c8a6bd4a4f8476b873b44eacee64ccb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -508,7 +508,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23da82bca7d543a390dea967497488a8",
+       "model_id": "12f29a8c19ae46efb33b7952a715e570",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,7 +533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f5c90ef0d6f4d529740050128351d3b",
+       "model_id": "bc0f7f324ef947f0a65480089118c5a5",
        "version_major": 2,
        "version_minor": 0
       },
